Fix npm package name.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-   "name": "gotoB",
+   "name": "gotob",
    "version": "0.1.0",
    "description": "One .min.js to rule 'em all.",
    "dependencies": {
