--- a/package.json
+++ b/package.json
@@ -3,16 +3,16 @@
    "version": "2.0.0",
    "description": "One .min.js to rule 'em all.",
    "dependencies": {
-      "cocholate": "3.0.1",
+      "cocholate": "3.0.2",
       "dale":      "6.0.2",
       "lith":      "6.0.6",
       "recalc":    "5.0.2",
       "teishi":    "5.0.3",
-      "uglify-js": "3.10.0"
+      "uglify-js": "3.11.1"
    },
    "main": "gotoB.min.js",
    "author": "Federico Pereiro <fpereiro@gmail.com>",
-   "contributors": ["Federico Pereiro <fpereiro@gmail.com>"],
+   "contributors": ["Federico Pereiro <fpereiro@gmail.com>", "Tom Sawada <sawadatomas@gmail.com>"],
    "license": [{
       "type": "Public Domain",
       "url": "http://github.com/fpereiro/gotoB#license"
